--- a/405P3/vite-project/style.css
+++ b/405P3/vite-project/style.css
@@ -3,6 +3,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
+  min-height: 640px;
+  min-width: 480px;
 }
 
 div {
@@ -12,6 +14,8 @@ div {
   padding: 0.4em;
   margin: 0.2em;
   z-index: 99;
+  bottom: 2em;
+  left: 2em;
 }
 
 .bold {
