--- a/405P3/vite-project/style.css
+++ b/405P3/vite-project/style.css
@@ -1,3 +1,10 @@
+/*
+  Arthur Baldwin CMSC 405 6381 Project 3 02/19/2023
+  This file contains the css used in the submission for the third project.
+  It sets the canvas at a fixed position, and has a minimum size of 640x480
+  for the 3d scene. It uses absolute positioning to place the div containing 
+  the controls over the canvas and in the bottom left corner.
+*/
 
 canvas {
   position: fixed;
